--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,12 +12,9 @@ Thibault Lebrun - Développeur web fullstack senior
     <h1>
       Développement de plateformes web modernes et responsables
     </h1>
-    <p class="mb-4">
-      Développeur web fullstack / backend sénior (9 ans d'expérience), je conçois et développe des plateformes web et des backends robustes en Python ou Node.js.
-    </p>
     <blockquote class="mb-4">
-      Je me spécialise dans la création de <strong>MVP</strong> et de plateformes webs de moyenne complexité
-      où je vous propose une solution <strong>professionnelle</strong>, complète et scalable à <strong>moindre coût</strong>.
+      Développeur web fullstack senior avec 10 ans d'expérience je me spécialise dans l'accompagnement de projets digitaux de toute taille et la création de MVP
+      où je vous propose une solution professionnelle, complète et scalable faite sur mesure.
     </blockquote>
     <blockquote class="mb-4">
     Pour les projets plus ambitieux je collabore avec <a href="https://improba.fr/" target="_blank">Improba</a>, une entreprise spécialisée dans le développement
