--- a/layouts/post/list.html
+++ b/layouts/post/list.html
@@ -38,17 +38,7 @@ Blog
         <a href="{{ .Permalink }}">
           <div class="
             px-4 sm:px-6 md:px-8 pt-1 pb-3 sm:pb-4 mb-4 sm:mb-6
-            border-primary
-            rounded-md
-            shadow-sm
-            transition duration-300 ease-in-out
-            {{- if .Params.color }}
-            relative overflow-hidden
-            {{- else }}
-            bg-neutral-primary
-            {{- end }}
-            "
-            {{- if .Params.color }} style="background-color: {{ .Params.color }}15;"{{- end }}
+            " style="background-color: #d9dbdd; border-radius: 10px;"
             >
             <div class="relative z-10">
             <h2 class="my-0">
