--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -12,11 +12,10 @@
     <a href="{{ $project.Permalink }}">
       <div class="
         px-4 sm:px-6 md:px-8 pt-3 pb-3 sm:pb-4 mb-4 sm:mb-6
-        border-gray-300 border-4
-        rounded-md
-        shadow-sm hover:shadow-md
+        border-gray-300 border-4 bg-[#a2c1e8]
         transition duration-300 ease-in-out
-      " {{- if .Params.color }} style="background-color: {{ .Params.color }}15;"{{- end }}
+      "
+           style="background-color: #d9dbdd; border-radius: 10px;"
       >
         <div class="relative z-10">
           <div class="flex items-start justify-between items-center gap-4 mb-4">
