update home title

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@ Thibault Lebrun - Senior Fullstack Web Developer
     </div>
 
     <h1>
-      Building Modern and Responsible Web Platforms
+      Building IA ready modern and responsible web platforms
     </h1>
     <blockquote class="mb-4">
       Senior fullstack web developer with 10 years of experience, I specialize in supporting digital projects of all sizes and creating MVPs,
