--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -29,7 +29,7 @@
 
 .highlight .lntd:first-child {
   padding-right: 0.75rem;
-  border-right: 1px solid #44475a;
+  border-right: 1px solid #415A77;
 }
 
 .highlight .lntd:last-child {
