--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
   {{ errorf "\n\nThere are two possible situations that led to this error:\n  1. You haven't copied the config.toml yet. See https://github.com/olOwOlo/hugo-theme-even#installation \n  2. You have an incompatible update. See https://github.com/olOwOlo/hugo-theme-even/blob/master/CHANGELOG.md#400-2018-11-06 \n\n有两种可能的情况会导致这个错误发生:\n  1. 你还没有复制 config.toml 参考 https://github.com/olOwOlo/hugo-theme-even/blob/master/README-zh.md#installation \n  2. 你进行了一次不兼容的更新 参考 https://github.com/olOwOlo/hugo-theme-even/blob/master/CHANGELOG.md#400-2018-11-06 \n" -}}
 {{ end -}}
 <!DOCTYPE html>
-<html lang="{{ .Site.Language }}" data-theme="light">
+<html lang="{{ .Site.Language }}" data-theme="dark">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -16,7 +16,7 @@
 
   </style>
 </head>
-<body class="bg-[#E0E0E0] text-[#34495E] border-t-[3px] border-primary">
+<body class="bg-rich-black text-platinum border-t-[3px] border-yinmn-blue">
 <!--  {{ partial "slideout.html" . }}-->
   <div class="mx-auto px-4 w-full max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-3xl">
     {{ if not .Params.hideHeaderAndFooter -}}
