--- a/layouts/partials/components/tag.html
+++ b/layouts/partials/components/tag.html
@@ -1,3 +1,3 @@
 {{- $text := .text -}}
 
-<span class="bg-[#f0f0f0] text-[#555] py-1 px-2 rounded text-xs font-medium">{{ $text }}</span>
+<span class="bg-yinmn-blue text-platinum py-1 px-2 rounded text-xs font-medium">{{ $text }}</span>
