--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -12,14 +12,12 @@
     <a href="{{ $project.Permalink }}">
       <div class="
         px-4 sm:px-6 md:px-8 pt-3 pb-3 sm:pb-4 mb-4 sm:mb-6
-        border-gray-300 border-4 bg-[#a2c1e8]
-        transition duration-300 ease-in-out
-      "
-           style="background-color: #d9dbdd; border-radius: 10px;"
-      >
+        bg-oxford-blue border border-yinmn-blue rounded-lg
+        hover:border-shadow-blue transition-colors
+      ">
         <div class="relative z-10">
           <div class="flex items-start justify-between items-center gap-4 mb-4">
-            <h2 class="my-0 text-[#2e4170] flex-1">
+            <h2 class="my-0 text-platinum flex-1">
                 {{ $project.Title }}
             </h2>
             {{- if $project.Params.logo }}
@@ -27,7 +25,7 @@
             {{- end }}
           </div>
           {{- if $project.Description }}
-            <p class="text-[#333] text-sm sm:text-base leading-relaxed mb-3 sm:mb-4">{{ $project.Description }}</p>
+            <p class="text-shadow-blue text-sm sm:text-base leading-relaxed mb-3 sm:mb-4">{{ $project.Description }}</p>
           {{- end }}
           <div class="grid grid-cols-[1fr_auto] items-end gap-x-4">
             <!-- Tags -->
@@ -41,7 +39,7 @@
 
             <!-- Duration -->
             {{- if .Params.duration }}
-            <span class="text-xs sm:text-sm px-2 py-1 bg-gray-100 rounded-xl opacity-50 justify-self-end">
+            <span class="text-xs sm:text-sm px-2 py-1 bg-rich-black rounded-xl opacity-70 justify-self-end text-shadow-blue">
     {{ .Params.duration }}
   </span>
             {{- end }}
